Fix head cropping in Campaign Highlights collage
- Add object-position: center top to prevent head cropping
- Increase height of all photo containers by 20px
- Increase collage container height to 550px for better spacing

--- a/styles.css
+++ b/styles.css
@@ -741,7 +741,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .collage-container {
     position: relative;
-    height: 500px;
+    height: 550px;
     margin: 2rem 0;
 }
 
@@ -758,6 +758,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center top;
     transition: transform 0.3s ease;
 }
 
@@ -776,7 +777,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 50px;
     left: 10%;
     width: 280px;
-    height: 180px;
+    height: 200px;
     transform: rotate(-5deg);
     z-index: 1;
 }
@@ -785,7 +786,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 20px;
     right: 15%;
     width: 220px;
-    height: 160px;
+    height: 180px;
     transform: rotate(8deg);
     z-index: 2;
 }
@@ -794,7 +795,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 180px;
     left: 25%;
     width: 240px;
-    height: 180px;
+    height: 200px;
     transform: rotate(3deg);
     z-index: 3;
 }
@@ -803,7 +804,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 120px;
     right: 5%;
     width: 200px;
-    height: 150px;
+    height: 170px;
     transform: rotate(-8deg);
     z-index: 2;
 }
@@ -812,7 +813,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 280px;
     left: 5%;
     width: 190px;
-    height: 140px;
+    height: 160px;
     transform: rotate(12deg);
     z-index: 1;
 }
@@ -821,7 +822,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 260px;
     right: 20%;
     width: 250px;
-    height: 170px;
+    height: 190px;
     transform: rotate(-3deg);
     z-index: 2;
 }
